Suggested fix for sponsor logos, can jump back to previous version if you want to

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -147,6 +147,9 @@
     flex-wrap: wrap;
     -webkit-flex-wrap: wrap;
   }
+  .img-cell {
+    text-align: center;
+  }
   .img-cell img {
     width: 50% !important;
   }
@@ -199,14 +202,18 @@
   justify-content: flex-end;
 }
 .grad {
-  background: -webkit-linear-gradient(#7396ef, white);
+  background: -webkit-linear-gradient(#7396ef, #ffffff);
   /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(#7396ef, white);
+
+  background: -o-linear-gradient(#7396ef, #ffffff);
   /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(#7396ef, white);
+
+  background: -moz-linear-gradient(#7396ef, #ffffff);
   /* For Firefox 3.6 to 15 */
-  background: linear-gradient(#7396ef, white);
+
+  background: linear-gradient(#7396ef, #ffffff);
   /* Standard syntax */
+
 }
 .img-row {
   display: -webkit-box;
@@ -235,6 +242,8 @@
   flex: 1 1 auto;
   padding: 10px;
   margin: 10px;
+}
+.align-center {
   text-align: center;
 }
 .img-cell img {
@@ -246,19 +255,23 @@
   width: 60%;
 }
 .img-cell .img-extra-small {
-  width: 20%;
+  width: 50%;
 }
 body {
   margin: 0;
   height: 100%;
-  background: -webkit-linear-gradient(#7396ef, white);
+  background: -webkit-linear-gradient(#7396ef, #ffffff);
   /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(#7396ef, white);
+
+  background: -o-linear-gradient(#7396ef, #ffffff);
   /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(#7396ef, white);
+
+  background: -moz-linear-gradient(#7396ef, #ffffff);
   /* For Firefox 3.6 to 15 */
-  background: linear-gradient(#7396ef, white);
+
+  background: linear-gradient(#7396ef, #ffffff);
   /* Standard syntax */
+
   background-repeat: no-repeat;
 }
 .header {
@@ -372,7 +385,7 @@ p {
 }
 a {
   outline: 0;
-  color: black;
+  color: #000000;
   display: inline;
 }
 a:hover {
