--- a/assets/less/responsive.less
+++ b/assets/less/responsive.less
@@ -165,8 +165,8 @@
     .wrap;
   }
 
-  .img-cell .img-pg {
-
+  .img-cell {
+    .align-center;
   }
 
   .img-cell img {
