--- a/assets/less/utility.less
+++ b/assets/less/utility.less
@@ -92,7 +92,9 @@
 
   padding: 10px;
   margin: 10px;
+}
 
+.align-center {
   text-align: center;
 }
 
@@ -107,5 +109,5 @@
 }
 
 .img-cell .img-extra-small {
-  width: 20%;
+  width: 50%;
 }
